--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.1.3",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
